p2/confs/nginx-deployment-app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-files
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-files
        configMap:
          name: app3-html
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: NodePort   # Changer ClusterIP en NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003  # Un port entre 30000 et 32767
  selector:
    app: app3
